# server/api/controllers/imageUploads/controller.js
@@ -1,0 +1,9 @@
+class UploadsController{
+    upload(req, res){
+        console.log(req.file)
+        const path = `/images/${req.file.filename}`
+        res.json({path})
+    }
+}
+
+export default new UploadsController();
