# server/routes.js
@@ -2,6 +2,7 @@ import examplesRouter from './api/controllers/examples/router';
 import userRouter from './api/controllers/users/router';
 import productRouter from './api/controllers/products/router';
 import authRouter from './api/controllers/auth/router';
+import uploadRouter from './api/controllers/imageUploads/router';
 import cors from 'cors';
 
 export default function routes(app) {
@@ -13,6 +14,7 @@ export default function routes(app) {
   );
   app.use('/api/v1/examples', examplesRouter);
   app.use('/api/v1/users', userRouter);
+  app.use('/api/v1/imageUploads', uploadRouter)
   app.use('/api/v1/login',authRouter);
   app.use('/api/v1/products', productRouter);
   // app.get('/api/v1/login', (req, res) => {
